562 sheet Feb 11 4th

--- a/docs/stat562/Stat562.tex
+++ b/docs/stat562/Stat562.tex
@@ -133,38 +133,34 @@
 
 
 \subsubsection{4.1 4.2 Joint, Marginal, Conditional}
-$f(x,y)=f_X(x)f_Y(y)$ 4.2.5 | Indep $f(x,y)=g(x)h(y)$ 4.2.7 \\
+
+$f_X(x)=\sum_{y\in\mathbf{R}}f_{X,Y}(x,y)=\int_{-\infty}^{\infty}f(x,y)dy$ 4.1.6/10 $f(x|y)=P(X=x|Y=y)=\frac{f(x,y)}{f_Y(y)}$ 4.2.1 \\
+Indep $f(x,y)=f_X(x)f_Y(y)$ 4.2.5 $=g(x)h(y)$ 4.2.7 $X,Y$ indep r.v. $g(X)$,$h(Y)$ indep 4.3.5\\
 $F(x,y)=P(X\le x, Y\le y)=\int_{-\infty}^{y}\int_{-\infty}^{x}f(s,t)dsdt$ | Indep $F_{X,Y}(x,y)=F_X(x)F_Y(y)$
 
-$f(x|y)=P(X=x|Y=y)=\frac{f(x,y)}{f_Y(y)}$ 4.2.1 \\
-$f_X(x)=\sum_{y\in\mathbf{R}}f_{X,Y}(x,y)=\int_{-\infty}^{\infty}f(x,y)dy$\\
-
-$M_Z(t)=M_X(t)M_Y(t)$ 4.2.12 | $M_Z(t)=(M_X(t))^n$ 4.6.7 | $M_{\bar X}(t)=[M_X(\frac{t}n)]^n$ 5.2.7 \\
-$M_W(t)=M_X(t)M_Y(t)=e^{\mu_1(e^t-1)}e^{\mu_2(e^t-1)}=e^{(\mu_1+\mu_2)(e^t-1)}$ Use 4.2.12 proof 4.3.2 
-
-$X,Y$ indep r.v. $g(X)$,$h(Y)$ indep 4.3.5\\
-$U\sim Geom(p=\frac12),u=1,2..$ $V\sim N Bin(p=\frac12,r=2),v=2,3..$ (U,V) $\{(u,v):u=1,2,..;v=u+1,u+2,..\}$ not indep
+$M_Z(t)=M_X(t)M_Y(t)$ 4.2.12 | $M_Z(t)=(M_X(t))^n$ 4.6.7 | $M_{\bar X}(t)=[M_X(\frac{t}n)]^n$ 5.2.7\\
+$M_W(t)=M_X(t)M_Y(t)=e^{\mu_1(e^t-1)}e^{\mu_2(e^t-1)}=e^{(\mu_1+\mu_2)(e^t-1)}$ Use 4.2.12 proof 4.3.2\\
+$U\sim Geom(\frac12),u=1,2..$ $V\sim NBin(2,\frac12),v=2,3..$ $\{(u,v):u=1,2,..;v=u+1,u+2,..\}$ not indep
 
 \subsubsection{Expectations}
 
 $E[X]=\int_{-\infty}^{\infty}xf(x)dx=E[E(X|Y)]$ 4.4.3 $E[g(x)]=\sum_{x\in D}h(x)p(x)=\int_{-\infty}^{\infty}g(x)f(x)dx$\\
 $E[(X-\mu)^n]=\mu_n=\sum{(x-\mu)^n}p(x)=\int{(x-\mu)^n}f(x)dx$ | $E(aX+b)=aE(X)+b$\\
-$E[g_1(X_1)\cdots g_n(X_n))=(E(g_1(X_1)]\cdots(E(g_n(X_n))$ $X_1,.., X_n$ indep 4.6.6
-$E[g(\vec X)]=\sum\cdots\sum_{all\vec x} g(\vec x)p(\vec x)=\idotsint_{\mathbf{R^n}}g(\vec x)f(\vec x)d\vec x$
-$E[\sum_{i=1}^ng(X_i)]=nE(g(X_1))$ 5.2.5\\
+$E[g(\vec X)]=\sum\cdots\sum_{all\vec x} g(\vec x)p(\vec x)=\idotsint_{\mathbf{R^n}}g(\vec x)f(\vec x)d\vec x$\\
 $E[g(X,Y)]=\int_{-\infty}^{\infty}\int_{-\infty}^{\infty} g(x,y)f(x,y)dxdy$ 4.1.10\\
-$E[XY]=E[X]E[Y]$ $E[g(X)h(Y)]=E[g(x)]E[h(y)]$ $P(X\le x,Y\le y)=P(X\le x)P(Y\le y)$ 4.2.10\\
-$E[g(X)|y]=\sum_xg(x)f(x|y)=\int_{-\infty}^{\infty}g(x)f(x|y)dx$ r.v.(y) 4.2.3 
+$E[g(X)|y]=\sum_xg(x)f(x|y)=\int_{-\infty}^{\infty}g(x)f(x|y)dx$ r.v.(y) 4.2.3 $E[g(X)h(Y)|y]=h(Y)E[g(X)|y]$\\
+$E[XY]=E[X]E[Y]=E[g(x)]E[h(y)]$ $P(X\le x,Y\le y)=P(X\le x)P(Y\le y)$ indep 4.2.10\\
+$E[g_1(X_1)\cdots g_n(X_n)]=E[g_1(X_1)]\cdots E[g_n(X_n)]$ $X_1,.., X_n$ indep 4.6.6 $E[g(X)|y]=E[g(X)]$ indep\\
 
 \textbf{Variances}
 
-$V[X]=\sigma_{x}^2=E(X^2)-[E(X)]^2=E[V(X|Y)]+V[E(X|Y)]$ 4.4.7
+$V[X]=\sigma_{x}^2=E(X^2)-[E(X)]^2=E[V(X|Y)]+V[E(X|Y)]$ 4.4.7 | $V[aX+b]=a^2\sigma^2$
 
-$V[X|Y]=E[(X-E[X|Y])^2|Y]=E[X^2|y]-(E[X|y])^2$ 4.2.4
+$V[X|Y]=E[(X-E[X|Y])^2|Y]=E[X^2|y]-(E[X|y])^2$ 4.2.4 | $\sigma_{ax+b} =|a|\sigma_{x}$
 
-$V[aX\pm bY]=a^2VX+b^2VY\pm 2abCov(X,Y)$ 4.5.6 $V[aX+b]=a^2\sigma^2$ $\sigma_{ax+b} =|a|\sigma_{x}$
+$V[aX\pm bY]=a^2VX+b^2VY\pm 2abCov(X,Y)$ | $V[X\pm Y]=VX+VY$ Indep 4.5.6 \\
 
-$V[X\pm Y]=VX+VY$ Indep 4.5.6 $V[\sum_{i=1}^ng(X_i)]=nVar(g(X_1))$ 5.25
+$E[\sum_{i=1}^ng(X_i)]=nE(g(X_1))$ | $V[\sum_{i=1}^ng(X_i)]=nVar(g(X_1))$ r.s. 5.25
 
 \subsubsection{4.5 Covariance and Correlation}
 
@@ -193,9 +189,8 @@ $Y|\Lambda\sim Pois(\Lambda), \Lambda\sim Gamma(\alpha,\beta)$ then $Y\sim NBin(
 $X|P\sim Bin(n,P), P\sim Gamma(\alpha,\beta)$ $EX=E[E(X|P)]=E[nP]=n\frac{\alpha}{\alpha+\beta}$ Beta-Bin 4.4.6
 $V[X]=V[E(X|P)]+E[V(X|P)]=\frac{n^2\alpha\beta}{(\alpha+\beta)^2(\alpha+\beta+1)}+\frac{n\alpha\beta}{(\alpha+\beta)(\alpha+\beta+1)}=\frac{n\alpha\beta(\alpha+\beta+n)}{(\alpha+\beta)^2(\alpha+\beta+1)}$ Beta-Bin 4.4.8 
 
-$f_X(x)\sim n(\mu_X,\sigma^2_X)$ $f_Y(y)\sim n(\mu_Y,\sigma^2_Y)$, $\rho_{XY}=\rho$ bivarialte normal 4.5.10
-$f_{Y|X}(y|x) \sim n\left(\mu_Y+\rho\frac{\sigma_Y}{\sigma_X}(x-\mu_X),\sigma_Y^2(1-\rho^2)\right)$
-$aX+bY\sim n(a\mu_X+b\mu_Y,a^2\mu_X^2+b^2\mu_Y^2+2ab\rho\sigma_X\sigma_Y$
+bivarialte normal$f_X(x)\sim n(\mu_X,\sigma^2_X)$ | $f_{X|Y}(x|y) \sim n\left(\mu_X+\rho\frac{\sigma_X}{\sigma_Y}(x-\mu_Y),\sigma_X^2(1-\rho^2)\right)$\\
+4.5.10 $\rho_{XY}=\rho$ $f_Y(y)\sim n(\mu_Y,\sigma^2_Y)$ | $aX+bY\sim n(a\mu_X+b\mu_Y,a^2\mu_X^2+b^2\mu_Y^2+2ab\rho\sigma_X\sigma_Y$
 
 $X_1,..X_n\sim Gamma(\alpha,\beta)$, $X_1+..X_n\sim Gamma(\alpha_1+..\alpha_n,\beta)$ $\bar X\sim Gamma(n\alpha,\beta/n)$ indep 4.6.8\\
 $X\sim Cauchy(0,\sigma), Y\sim Cauchy(0,\tau)$ | $X+Y\sim Cauchy(0,\sigma+\tau)$ 5.2.10\\
@@ -221,11 +216,11 @@ $X_i\sim n(\mu_X,\sigma_X^2)$，$Y_j\sim n(\mu_Y,\sigma_Y^2)$, $X_1..X_n$,$Y_1..
 $X\sim F_{p,q}$, $\frac{1}X \sim F_{q,p}$ |$X\sim T_q$, $X^2 \sim F_{1,q}$ | $X\sim F_{p,q}$, $\frac{\frac{p}{q}X}{1+\frac{p}{q}X} \sim Beta(\frac{p}2,\frac{q}2)$
 
 
-$Var\chi^2_{n-1}=Var[\frac{(n-1)S^2}{\sigma^2}]=\frac{(n-1)^2}{\sigma^4}Var[S^2]=2(n-1)\implies Var[S^2]=\frac{2\sigma^4}{n-1}$
+$V\chi^2_{n-1}=V[\frac{(n-1)S^2}{\sigma^2}]=\frac{(n-1)^2}{\sigma^4}Var[S^2]=2(n-1)\implies Var[S^2]=\frac{2\sigma^4}{n-1}$
 
 \subsection{5.4 Order statistics}
 
-5.4.4 $f_{K}(x)=\frac{n!}{(j-1)!(n-j)!}K[F_X(x)]^{k-1}[1-F_X(x)]^{n-k}f(x)$ 1-29p9
+5.4.4 $f_{K}(x)=K\binom{n}{k}[F_X(x)]^{k-1}[1-F_X(x)]^{n-k}f(x)$ or $\frac{n!}{(k-1)!(n-k)!}$ 1-29p9
 
 5.4.6 $f_{X_{(1)},..,X_{(n)}}(x_1,..,x_n)=\begin{cases}n!f_X(x_1)\cdot...\cdot f_X(x_n) &-\infty<x_1<..<x_n<\infty\\0&\text{otherwise}\end{cases}$ $f_{X_{(i)},X_{(j)}}(u,v)=\frac{n!}{(i-1)!(j-1-i)!(n-j)!}f_X(u)f_X(v)[F_X(u)]^{i-1}[F_X(v)-F_X(u)]^{j-1-i}[1-F_X(v)]^{n-j}$
 
@@ -391,8 +386,17 @@ $\frac{da^x}{dx}=a^xln(a)$   & $\frac{d\tan^{-1}x}{dx}=\frac1{1+x^2}$  & $\frac{
 $\frac{d\cos{x}}{dx}=-\sin{x}$& $\frac{d\tan{x}}{dx}=\sec^2{x}$  & $\frac{dx(\ln{x}-1)}{dx}=\ln{x}$ 
 \end{tabular} 
 
+\begin{tabular}{ccc}
+~ & Replace & No Replace  \\ \midrule
+Fixed \# trials ($n$) & Binomial & HGeom \\ 
+~ & (Bern if $n = 1$) & ~ \\ 
+Draw until $r$ success & NBin & NHGeom \\ 
+~ & (Geom if $r = 1$) & ~\\ \bottomrule
+\end{tabular}
 
+$U\sim Geom(\frac12),u=1,2..$ \# of trials needed to get the first head.
 
+$V\sim NBin(2,\frac12r),v=2,3..$ \# of trials needed to get two heads in repeated tosses of a fair coin.
 
 \end{multicols}
 
@@ -403,7 +407,7 @@ $\frac{d\cos{x}}{dx}=-\sin{x}$& $\frac{d\tan{x}}{dx}=\sec^2{x}$  & $\frac{dx(\ln
 $\Bern(p) $ & $ $ & $p^xq^{1-x},x\in\{1,0\}$ & $p$ & $p$ & $pq$ & $pe^t+q$ \\
 \hline
 
-$\Bin(n,p)$ & $I_{1-p}(n-x,x+1)$ & $ \binom{n}{x}p^x q^{n-x}; x \in \{0,1..n\}$ & $np$ & $\mu(\mu+q)$ & $q\mu$ & $(pe^t+q)^n$ \\
+$\Bin(n,p)$ & $I_{1-p}(n-x,x+1)$ & $ \binom{n}{x}p^x q^{n-x}; x \in \{0,1..n\}$ & $np$ & $\mu(\mu+q)$ & $\mu q$ & $(pe^t+q)^n$ \\
 \hline
 
 $\Geom(p)$ & $1-q^x    $ & $pq^{x-1},x\in 1,2,..$ & $\frac1p  $ & $\frac{p+2q}{p^2} $ & $\frac{q}{p^2}$ & $\frac{pe^t}{1-qe^t},t<-\ln{q}$ \\
@@ -474,8 +478,6 @@ Dirichlet & $B(a)=\frac{\Pi_{i=1}^k\Gamma(a_i)}{\Gamma(\sum_{i=1}^ka_i)}$ & $\fr
 
 \end{tabular}
 
-$U\sim Geom(p=\frac12),u=1,2..$ the number of trials needed to get the first head.
 
-$V\sim N Bin(p=\frac12,r=2),v=2,3..$ the number of trials needed to get two heads in repeated tosses of a fair coin.
 
 \end{document}
