--- a/static/stat562/Stat562.tex
+++ b/static/stat562/Stat562.tex
@@ -134,7 +134,7 @@
 
 \subsubsection{4.1 4.2 Joint, Marginal, Conditional}
 
-$f_X(x)=\sum_{y\in\mathbf{R}}f_{X,Y}(x,y)=\int_{-\infty}^{\infty}f(x,y)dy$ 4.1.6/10 $f(x|y)=P(X=x|Y=y)=\frac{f(x,y)}{f_Y(y)}$ 4.2.1 \\
+$f_X(x)=\sum\limits_{y\in\mathbf{R}}f_{X,Y}(x,y)=\int_{-\infty}^{\infty}f(x,y)dy$ 4.1.6/10 $f(x|y)=P(X=x|Y=y)=\frac{f(x,y)}{f_Y(y)}$ 4.2.1 \\
 Indep $f(x,y)=f_X(x)f_Y(y)$ 4.2.5 $=g(x)h(y)$ 4.2.7 $X,Y$ indep r.v. $g(X)$,$h(Y)$ indep 4.3.5\\
 $F(x,y)=P(X\le x, Y\le y)=\int_{-\infty}^{y}\int_{-\infty}^{x}f(s,t)dsdt$ | Indep $F_{X,Y}(x,y)=F_X(x)F_Y(y)$
 
@@ -144,11 +144,11 @@ $U\sim Geom(\frac12),u=1,2..$ $V\sim NBin(2,\frac12),v=2,3..$ $\{(u,v):u=1,2,..;
 
 \subsubsection{Expectations}
 
-$E[X]=\int_{-\infty}^{\infty}xf(x)dx=E[E(X|Y)]$ 4.4.3 $E[g(x)]=\sum_{x\in D}h(x)p(x)=\int_{-\infty}^{\infty}g(x)f(x)dx$\\
+$E[X]=\int_{-\infty}^{\infty}xf(x)dx=E[E(X|Y)]$ 4.4.3 $E[g(x)]=\sum\limits_{x\in D}h(x)p(x)=\int_{-\infty}^{\infty}g(x)f(x)dx$\\
 $E[(X-\mu)^n]=\mu_n=\sum{(x-\mu)^n}p(x)=\int{(x-\mu)^n}f(x)dx$ | $E(aX+b)=aE(X)+b$\\
-$E[g(\vec X)]=\sum\cdots\sum_{all\vec x} g(\vec x)p(\vec x)=\idotsint_{\mathbf{R^n}}g(\vec x)f(\vec x)d\vec x$\\
+$E[g(\vec X)]=\sum\cdots\sum\limits_{all\vec x} g(\vec x)p(\vec x)=\idotsint\limits_{\mathbf{R^n}}g(\vec x)f(\vec x)d\vec x$\\
 $E[g(X,Y)]=\int_{-\infty}^{\infty}\int_{-\infty}^{\infty} g(x,y)f(x,y)dxdy$ 4.1.10\\
-$E[g(X)|y]=\sum_xg(x)f(x|y)=\int_{-\infty}^{\infty}g(x)f(x|y)dx$ r.v.(y) 4.2.3 $E[g(X)h(Y)|y]=h(Y)E[g(X)|y]$\\
+$E[g(X)|y]=\sum\limits_xg(x)f(x|y)=\int_{-\infty}^{\infty}g(x)f(x|y)dx$ r.v.(y) 4.2.3 $E[g(X)h(Y)|y]=h(Y)E[g(X)|y]$\\
 $E[XY]=E[X]E[Y]=E[g(x)]E[h(y)]$ $P(X\le x,Y\le y)=P(X\le x)P(Y\le y)$ indep 4.2.10\\
 $E[g_1(X_1)\cdots g_n(X_n)]=E[g_1(X_1)]\cdots E[g_n(X_n)]$ $X_1,.., X_n$ indep 4.6.6 $E[g(X)|y]=E[g(X)]$ indep\\
 
@@ -156,7 +156,7 @@ $E[g_1(X_1)\cdots g_n(X_n)]=E[g_1(X_1)]\cdots E[g_n(X_n)]$ $X_1,.., X_n$ indep 4
 
 $V[X]=\sigma_{x}^2=E(X^2)-[E(X)]^2=E[V(X|Y)]+V[E(X|Y)]$ 4.4.7 | $V[aX+b]=a^2\sigma^2$
 
-$V[X|Y]=E[(X-E[X|Y])^2|Y]=E[X^2|y]-(E[X|y])^2$ 4.2.4 | $\sigma_{ax+b} =|a|\sigma_{x}$
+$V[X|Y]=E[(X-E[X|Y])^2|Y]=\sum\limits_x [x-E[X|Y]^2 f(x|y)=E[X^2|y]-(E[X|y])^2$ 4.2.4 | $\sigma_{ax+b} =|a|\sigma_{x}$
 
 $V[aX\pm bY]=a^2VX+b^2VY\pm 2abCov(X,Y)$ | $V[X\pm Y]=VX+VY$ Indep 4.5.6 \\
 
@@ -277,7 +277,7 @@ Find the distribution of X(k) or $X_{(j)},X_{(k)}$
 
 
   \subsubsection{pdf/pmf}
-CDF: $F(x) = P(X \leq x) = \sum_{y: y \leq x} p(y)= \int_{-\infty}^{x} f(y) dy$ \\
+CDF: $F(x) = P(X \leq x) = \sum\limits_{y: y \leq x} p(y)= \int_{-\infty}^{x} f(y) dy$ \\
 	\textbf{probabilities}: $a \leq b$:\\
 PMF: $p(x)= P(X=x) = P(\forall w \in \mathcal{W}: X(w)=x)$ \\
 $P(a \leq X \leq b) = F(b) - F(a^{-}) $;
@@ -294,7 +294,7 @@ $ P(a \leq X \leq b) = F(b) - F(a) $
 
 	\subsubsection{CDF}
 Condition:$f(x)\ge 0 \forall x$
-pmf $\sum_xf_X(x)=1, pdf \int_{-\infty}^{\infty}f(x)dx=1$
+pmf $\sum\limits_xf_X(x)=1, pdf \int_{-\infty}^{\infty}f(x)dx=1$
 
 
 \subsubsection{mgf}
