562 sheet Feb 12 2nd

--- a/docs/stat562/Stat562.tex
+++ b/docs/stat562/Stat562.tex
@@ -174,7 +174,7 @@ $\rho_{XY}=\frac{\sigma_{XY}}{\sigma_X\sigma_Y}$ $Corr(X,Y)=\frac{Cov(X,Y)}{\sqr
 
 $f_{U,V}(u,v)=f_{X,Y}(h_1(u,v),h_2(u,v))|J|$ 4.3.2 $=\sum_{i=1}^kf_{X,Y}(h_{1i}(u,v),\ h_{2i}(u,v))|J_i|$ 4.3.5 
 
-$\begin{vmatrix} u=g_1(x,y)& x=h_1(u,v) \\ v=g_2(x,y) & y=h_2(u,v) \end{vmatrix}$ $J=\begin{vmatrix}\frac{\partial x}{\partial u} & \frac{\partial y}{\partial v} \\ \frac{\partial x}{\partial u} & \frac{\partial y}{\partial v} \end{vmatrix}=\frac{\partial x}{\partial u}\frac{\partial y}{\partial v}-\frac{\partial y}{\partial u}\frac{\partial x}{\partial v}$
+$\begin{vmatrix} u=g_1(x,y)& x=h_1(u,v) \\ v=g_2(x,y) & y=h_2(u,v) \end{vmatrix}$ $J=\begin{vmatrix}\frac{\partial x}{\partial u} & \frac{\partial x}{\partial v} \\ \frac{\partial y}{\partial u} & \frac{\partial y}{\partial v} \end{vmatrix}=\frac{\partial x}{\partial u}\frac{\partial y}{\partial v}-\frac{\partial y}{\partial u}\frac{\partial x}{\partial v}$
 
 $f_Z(z) =\int_{-\infty}^{\infty}f_X(w)f_Y(z-w)dw$  $Z=X+Y$ 5.2.9 Convolution
 
@@ -189,7 +189,7 @@ $Y|\Lambda\sim Pois(\Lambda), \Lambda\sim Gamma(\alpha,\beta)$ then $Y\sim NBin(
 $X|P\sim Bin(n,P), P\sim Gamma(\alpha,\beta)$ $EX=E[E(X|P)]=E[nP]=n\frac{\alpha}{\alpha+\beta}$ Beta-Bin 4.4.6
 $V[X]=V[E(X|P)]+E[V(X|P)]=\frac{n^2\alpha\beta}{(\alpha+\beta)^2(\alpha+\beta+1)}+\frac{n\alpha\beta}{(\alpha+\beta)(\alpha+\beta+1)}=\frac{n\alpha\beta(\alpha+\beta+n)}{(\alpha+\beta)^2(\alpha+\beta+1)}$ Beta-Bin 4.4.8 
 
-bivarialte normal$f_X(x)\sim n(\mu_X,\sigma^2_X)$ | $f_{X|Y}(x|y) \sim n\left(\mu_X+\rho\frac{\sigma_X}{\sigma_Y}(x-\mu_Y),\sigma_X^2(1-\rho^2)\right)$\\
+bivarialte normal$f_X(x)\sim n(\mu_X,\sigma^2_X)$ | $f_{X|Y}(x|y) \sim n\left(\mu_X+\rho\frac{\sigma_X}{\sigma_Y}(y-\mu_Y),\sigma_X^2(1-\rho^2)\right)$\\
 4.5.10 $\rho_{XY}=\rho$ $f_Y(y)\sim n(\mu_Y,\sigma^2_Y)$ | $aX+bY\sim n(a\mu_X+b\mu_Y,a^2\mu_X^2+b^2\mu_Y^2+2ab\rho\sigma_X\sigma_Y$
 
 $X_1,..X_n\sim Gamma(\alpha,\beta)$, $X_1+..X_n\sim Gamma(\alpha_1+..\alpha_n,\beta)$ $\bar X\sim Gamma(n\alpha,\beta/n)$ indep 4.6.8\\
