--- a/static/usp537/hw_usp537.Rmd
+++ b/static/usp537/hw_usp537.Rmd
@@ -228,6 +228,8 @@ $$\text{Elasticity }\eta=\frac{\Delta Q/Q}{\Delta P/P}=\frac{\frac{32290-22850}{
 ((15020-9500)/9500)/((0.1-0.25)/0.25)
 ((10860-8250)/8250)/((0.1-0.25)/0.25)
 ((6410-5100)/5100)/((0.1-0.25)/0.25)
+((-1820-375)/233760)/((0.1-0.25)/0.25)
+((-760-555)/203670)/((0.1-0.25)/0.25)
 
 ```
 
@@ -239,7 +241,9 @@ The fare elasticity of total weekday demand for MBTA rail transit service during
 
 For $-0.6885485\in(-1,1)$, the demand for midday rail transit service is inelastic. The result shows that the ridershipeach will decrease 0.6885% when fare has 1% increase, which indicates that the consumers are not sensitive with fare change.
 
-  c. How does the elasticity of demand for midday rail transit service vary among the three income groups (low, moderate, and high) for whichridership data are reported inTable 1? Comment onthese variations.
+ ---
+
+  c. How does the elasticity of demand for midday rail transit service vary among the three income groups (low, moderate, and high) for which ridership data are reported inTable 1? Comment onthese variations.
 
 $$\eta_{Low}=\frac{\Delta Q/Q}{\Delta P/P}=\frac{\frac{15020-9500}{9500}}{\frac{0.1-0.25}{0.25}}=-0.9684211$$
 
@@ -247,21 +251,41 @@ $$\eta_{Mid}=\frac{\Delta Q/Q}{\Delta P/P}=\frac{\frac{10860-8250}{8250}}{\frac{
 
 $$\eta_{Mid}=\frac{\Delta Q/Q}{\Delta P/P}=\frac{\frac{6410-5100}{5100}}{\frac{0.1-0.25}{0.25}}=-0.4281046$$
 
+The results show a negative relation between income group and absolute value of fare elasiticity of demand. The higher income group has lower absolute value of elasiticity which is closer to 0. It indictes the low income group is more sensitive to the change of fare.
 
-Results indicates that the fare elasticity of demand for midday rail transit service varies among income groups. Low income group has highest fare elasticity. The fare elasticity of moderate and high income groups are similar, --0.5272 and -0.4281 respectively.  If there is 1% decrease in fare, there will be 0.9684 ridership increase for low income group, 0.5272 ridership increase for moderate income group and 0.4281 increase for high income group.  Low income group is most sensitive to the fare change. 
+I also find the mean value of elasiticities is -0.6412661, which is larger than the overall elasticity. This result suggests that we may use different grouping methods to examine the data. If possible, using the value of income as a continue explainatory variable may be interesting.
 
+ ---
+ 
   d. Table 1 also reports the prior behavior of MBTA rail transit passengers traveling during “Dime Time” hours. Boston’s regional transportation planning agency estimated that 233,760 auto trips (including both driver and passenger trips) were made in the MBTA service area on a typical weekday before the “Dime Time” program began. From these data, estimate the cross elasticity of demand for auto travel with respect to fare for midday rail transit trips. How do you interpret the arithmetic sign of this elasticity?
 
-Cross-Elasticity = %∆Demand/ % ∆Fare = ((-(1820+375))/233760)/((0.10-0.25)/0.25) = 0.0157
-The cross-elasticity of demand for auto travel with respect to fare for midday rail transit trips is 0.0157. The positive arithmetic sigh indicates that auto trips and rail transit trips are substitutes. If there is 1% decrease in transit fare, there will be 0.157% decrease in auto trips. 
 
+$$\eta_{Cross}=\frac{\Delta Q_{Auto}/Q_{Auto}}{\Delta P_{Rail}/P_{Rail}}=\frac{\frac{-1820-375}{233760}}{\frac{0.1-0.25}{0.25}}=0.01564995$$
+
+The result shows a positve cross elasticity of demand, which prove auto trips and rail transit trips are substitute goods. The absolue value of cross elasticity is very close to 0 whcih indicate the number of auto users is very inelasitic with fare for rail transit.  Each percent decrease of fare for transit only brings 0.01564995% decrease in number of auto trips.
+
+ ---
 
   e. The MBTA estimated that prior to the “Dime Time” experiment, average weekday travel on the rail service during peak periods (7¬10am and 3¬6pm) was 203,670 passengers. Estimate the cross¬-elasticity of demand for peak-¬period rail travel with respect to the off¬-peak rail fare.
 
-Cross-Elasticity = %∆Demand/ % ∆Fare = ((-(760+555))/203670)/((0.10-0.25)/0.25) = 0.0107
-The cross-elasticity of demand for peak-period rail travel with respect to the off-peak rail fare is 0.0107. The positive arithmetic sigh indicates that peak-period rail travel and rail off-peak rail transit trips are substitutes. If there is 1% decrease in transit fare, there will be 0.0107% decrease in auto trips. 
+$$\eta_{Cross}=\frac{\Delta Q_{Peak}/Q_{Peak}}{\Delta P_{Off}/P_{Off}}=\frac{\frac{-760-555}{203670}}{\frac{0.1-0.25}{0.25}}=0.01076087$$
+
+The result shows a positve cross elasticity of demand, which prove peak-period rail trips and off-peak trips are substitute goods. The absolue value of cross elasticity is closer to 0 than that of auto trips whcih indicate the number of peak-period tirps is very inelasitic with fare for rail transit.  Each percent decrease of fare for transit only brings 0.01076087% decrease in number of peak-period rail trips. It can be explain that commuting trips are not sensitive to the change of off-peak fare.
+
 
   f. Please draw a demand curve andanswer the following questions using the diagram:
+
+```{r echo=FALSE}
+plot(c(0,40000), c(0,0.4), type = "n",xlab ="#Off-Peak rail trips", ylab ="Off-Peak fare")
+curve(0.6130826+(0.1-0.25)/(32290-22850)*x, 10000, 35000, add = TRUE)
+points(22850, 0.25, pch =0);text(22850, 0.25,"Before",adj=c(-0.5,-0.5))
+points(32290, 0.10, pch =1);text(32290, 0.10,"After",adj=c(-0.5,-0.5))
+polygon(x=c(0,22850,22850,0), y=c(0.1,0.1,0.25,0.25), density=10, angle=-45,lty =3);text(10000,0.2, "Consumer Surplus
+for previous riders")
+polygon(x=c(22850,32290,22850), y=c(0.1,0.1,0.25), density=10, angle=45,lty =3);text(27000,0.13, "Consumer Surplus
+for new riders")
+```
+
 
    (i) Label the area of total daily benefits to riders, as measured by the increase in consumer surplus, of the “Dime Time” experiment?
   
@@ -301,6 +325,20 @@ Lee’s 1980 study of gasoline demand in California yielded the following estima
 Based on the aggregate demand model, if gasoline price increases $0.25, there gasoline demand will decrease 4638200 gallons of gas in California. 
 
   b. Use budget lines and indifference curves to illustrate the effect of the tax increase on gasoline consumption and consumer welfare (utility). In addition to the total effect, please label the substitution and income effects.
+
+
+```{r echo=FALSE}
+
+plot(c(0,5), c(0,5), type = "n",xlab ="#Off-Peak rail trips", ylab ="Off-Peak fare",xaxs = "i",yaxs = "i")
+curve(x^(-2), 0, 8,col = "red",add = TRUE,);text(0.5,4.5, "U1");
+abline(a=3,b=-2, lty = 1);points(1,1, pch =1);text(1,1,"C",adj=c(-0.5,-0.5))
+curve(8*(x)^(-2), 0, 8,col = "red",add = TRUE,);text(1.5,4.5, "U2");
+abline(a=6,b=-2, lty=2);points(2,2, pch =2);text(2,2,"B",adj=c(-0.5,-0.5))
+abline(a=3,b=-2^(-1/2), lty=1);points(sqrt(8),1, pch =3);text(sqrt(8),1,"A",adj=c(-0.5,-0.5))
+arrows(sqrt(8),1.2,2.2,1.9, length = 0.1, code = 2, col ="blue", lty = 4)
+arrows(1.2,1.3,1.8,1.9, length = 0.1, code = 1, col ="blue", lty = 4)
+```
+
  
  The above figure illustrates the effect of the tax increase on gasoline consumption and consumer welfare (utility). Gasoline consumption is the X-axis. 
  
@@ -369,19 +407,3 @@ In class, we discussed the supply led and demand led views of transportation and
    b. From the example projects listed, what overall conclusions can you draw regarding supply led and demand led transportation initiatives, particularly the balance between the two?
 
 
-```{r echo=FALSE}
-
-plot(x=NULL, y = NULL,xlim=c(0,10), ylim=c(0,5),log = "", main = NULL, sub = NULL, xlab ="X1", ylab ="X2",asp =1)
-curve((x)/(x-1), 1, 8,col = "red",add = TRUE,);text(5,1, "U1");
-curve((x)/(x-2), 2, 8,col = "red",add = TRUE,);text(5,1.5, "U2");
-curve((x)/(x-3), 3, 8,col = "violet",add = TRUE,);text(5,2, "U3")
-
-abline(h = 0.5, lty = 2);abline(h = 2, lty = 4)
-abline(v =95000, lty=2);text(95000,0.8, "(95000,0.5)")
-abline(v =47500, lty=2);text(50000,5.5, "(47500,5.25)");text(47500,0.8, "(47500,0.5)")
-abline(v =80000, lty=4);text(80000,2.5, "(80000,2)")
-polygon(x=c(47500,95000,47500), y=c(0.5,0.5,5.25), density=10, angle=45,lty =3);text(60000,2.5, "DWL")
-abline(v =31558, lty=4);text(35000,8, "(31558,6.8442)")
-polygon(x=c(0,31558,0), y=c(6.8442,6.8442,10), density=6, angle=90,lty =3);text(15000,8, "CS")
-polygon(x=c(0,31558,31558,0), y=c(0.5,0.5,6.8442,6.8442), density=6, angle=0,lty =3);text(15000,4, "PS")
-```
