--- a/docs/usp537/hw_usp537.Rmd
+++ b/docs/usp537/hw_usp537.Rmd
@@ -223,7 +223,7 @@ So, for example, we know that the total number of people riding the rail system 
 $$\text{Elasticity }\eta=\frac{\Delta Q/Q}{\Delta P/P}=\frac{\frac{32290-22850}{22850}}{\frac{0.1-0.25}{0.25}}=-0.6885485$$
 
 
-```{r}
+```{r eval=FALSE, include=FALSE}
 ((32290-22850)/22850)/((0.1-0.25)/0.25)
 ((15020-9500)/9500)/((0.1-0.25)/0.25)
 ((10860-8250)/8250)/((0.1-0.25)/0.25)
