--- a/static/usp537/hw_usp537.Rmd
+++ b/static/usp537/hw_usp537.Rmd
@@ -222,17 +222,6 @@ So, for example, we know that the total number of people riding the rail system 
 
 $$\text{Elasticity }\eta=\frac{\Delta Q/Q}{\Delta P/P}=\frac{\frac{32290-22850}{22850}}{\frac{0.1-0.25}{0.25}}=-0.6885485$$
 
-
-```{r eval=FALSE, include=FALSE}
-((32290-22850)/22850)/((0.1-0.25)/0.25)
-((15020-9500)/9500)/((0.1-0.25)/0.25)
-((10860-8250)/8250)/((0.1-0.25)/0.25)
-((6410-5100)/5100)/((0.1-0.25)/0.25)
-((-1820-375)/233760)/((0.1-0.25)/0.25)
-((-760-555)/203670)/((0.1-0.25)/0.25)
-
-```
-
 The fare elasticity of total weekday demand for MBTA rail transit service during midday (10am¬3pm) is -0.6885485. 
 
  ---
@@ -272,6 +261,16 @@ $$\eta_{Cross}=\frac{\Delta Q_{Peak}/Q_{Peak}}{\Delta P_{Off}/P_{Off}}=\frac{\fr
 
 The result shows a positve cross elasticity of demand, which prove peak-period rail trips and off-peak trips are substitute goods. The absolue value of cross elasticity is closer to 0 than that of auto trips whcih indicate the number of peak-period tirps is very inelasitic with fare for rail transit.  Each percent decrease of fare for transit only brings 0.01076087% decrease in number of peak-period rail trips. It can be explain that commuting trips are not sensitive to the change of off-peak fare.
 
+```{r eval=FALSE, include=FALSE}
+((32290-22850)/22850)/((0.1-0.25)/0.25)
+((15020-9500)/9500)/((0.1-0.25)/0.25)
+((10860-8250)/8250)/((0.1-0.25)/0.25)
+((6410-5100)/5100)/((0.1-0.25)/0.25)
+((-1820-375)/233760)/((0.1-0.25)/0.25)
+((-760-555)/203670)/((0.1-0.25)/0.25)
+
+```
+
  ---
  
   f. Please draw a demand curve and answer the following questions using the diagram:
@@ -297,25 +296,6 @@ The whole shadow areas represent the increse in consumer surplus, which equal $\
 The left shadow area represents the increse in consumer surplus for previous passengers, which equal $22850\times(0.25-0.1)=3427.5$
 
   (iii) Describe verbally how were the benefits in (ii) divided among riders in the three income groups?
-
-```{r eval=FALSE, include=FALSE}
-(0.1-0.25)/(15020-9500)
-(0.1-0.25)/(10860-8250)
-(0.1-0.25)/(6410-5100)
-
-(15020+9500)*(0.25-0.1)/2
-(10860+8250)*(0.25-0.1)/2
-(6410+5100)*(0.25-0.1)/2
-
-(15020-9500)*(0.25-0.1)/2
-(10860-8250)*(0.25-0.1)/2
-(6410-5100)*(0.25-0.1)/2
-
-9500*(0.25-0.1)
-8250*(0.25-0.1)
-5100*(0.25-0.1)
-
-```
 
 ```{r echo=FALSE}
 plot(c(0,40000), c(0,0.4), type = "n",xlab ="# of Off-Peak rail trips", ylab ="Off-Peak fare ($)",xaxs = "i",yaxs = "i")
@@ -347,6 +327,21 @@ The fare saving to passengers who already traveled on the rail transit are divid
 
 The purpose of subsidies is to encourage more transit trips. The effect of reduction in fare by MBTA is measured by the number of new passengers, who changed their travel behavior.
 
+```{r eval=FALSE, include=FALSE}
+(0.1-0.25)/(15020-9500)
+(0.1-0.25)/(10860-8250)
+(0.1-0.25)/(6410-5100)
+(15020+9500)*(0.25-0.1)/2
+(10860+8250)*(0.25-0.1)/2
+(6410+5100)*(0.25-0.1)/2
+(15020-9500)*(0.25-0.1)/2
+(10860-8250)*(0.25-0.1)/2
+(6410-5100)*(0.25-0.1)/2
+9500*(0.25-0.1)
+8250*(0.25-0.1)
+5100*(0.25-0.1)
+```
+
  ---
 
  2. Using an aggregate demand model
@@ -365,6 +360,8 @@ $$\widehat{\Delta G}=-18552.8*\Delta Pr=-18552.8\times0.25 =-4638.2$$
 
 According to the model, when gasoline tax increases $0.25, the expected amount of gasoline consumption in California will decrease 4.6382 million gallons. 
 
+ ---
+
   b. Use budget lines and indifference curves to illustrate the effect of the tax increase on gasoline consumption and consumer welfare (utility). In addition to the total effect, please label the substitution and income effects.
 
 ```{r echo=FALSE}
@@ -382,7 +379,8 @@ text(1.6,1.2, "income
 effect")
 ```
 
-
+ ---
+ 
   c. Wanting to increase the price of gasoline but not reduce economic welfare, suppose that, in addition to the \$0.25 cent tax on gasoline, the government also provides consumers with an income tax rebate amounting to \$16.7 billion dollars (total amount).
 
    (i) According to the estimation results above, what would be the effect of the gasoline tax and income tax policies on gasoline demand?
@@ -401,20 +399,15 @@ A possible policy is
 
 Yes. It is possible to implement a policy that is consistent with the goals of environmentalists (gasoline tax decrease gasoline demand) and yet not reduce the economic welfare of consumers (tax rebate keeps the same consumer welfare). 
 
- * Assuming that the dummy variables for the gasoline crises (DEC73 to MAR74) represent significant queuing during those months, we can estimate the estimated gasoline crisis queuing cost premiumper gallon for DEC73 as follows:
+ ---
  
- ∆QueuingCostJan74/∆Crisis=  τ_2/β_2 = -1629.7/(-18522.8)=0.0878
-
-∆QueuingCostFeb74/∆Crisis=  τ_3/β_2 = -(-2313.1)/(-18552.8)=0.1247
-
-∆QueuingCostMar74/∆Crisis=  τ_4/β_2 = -(-2524.1629.7)/(-18522.8)=0.1360
-
-The queuing cost premium for each gallon of gasoline for JAN74, FEB74, MAR74 is 0.0878, 0.1247, 0.1360 respectively. 
-
   d. Calculate the income elasticity of demand, given that the sample mean for Income was $0.0011 billion dollars and gas demand was 0.35 thousand gallons.
 
-Elasticitylow = %∆Demand/ % ∆Price = ∆G/∆P*  P/G= β_2*  P/G=177.3*0.0011/0.35=0.8715 
-The income elasticity of demand for gasoline was 0.872. If there is a 1% increase in income, there will be a 0.87% increase in gasoline demand. Because 0.08715 < 1, the elasticity of demand is inelastic. 
+$$\eta_{}=\frac{\Delta Q_{}/Q_{}}{\Delta In_{}/In_{}}=\beta_2\frac{In_{}}{Q_{}}=277.3\frac{0.0011}{0.35}=0.8715143$$
+
+the absolute value of income elasticity of demand is 0.8715143 that is less than 1. Each 1 percent increase of income makes 0.8715143% increase of demand. The Gasolline consumption is inelastic for income.
+
+ ---
 
  3. Chicken or the egg
 
@@ -440,6 +433,26 @@ In class, we discussed the supply led and demand led views of transportation and
 
    a. Categorize each of these projects into supply or demand led projects, and explain the reasons why you came to that particular view. Note that in many cases you do not need to know the specifics regarding the particular project to come to an educated guess, although some basic Googling of the locations that you are not familiar with might help with your guess.
 
+|         |
+| ---     |
+supply led|CrossRail|Channel Tunnel|M6 Toll motorway|Great Belt Link|Golden Gate Bridge|Skye Bridge|Mundra container terminal|Jubilee line extension|WES Commuter Rail
+demand led|
+
    b. From the example projects listed, what overall conclusions can you draw regarding supply led and demand led transportation initiatives, particularly the balance between the two?
 
+The opinion of supply led treates transportation projects as one cause of economic development. Inversely, the opinion of demand led thinks that transportation projects is one effect of economic development. We know that economic development depend on many factors other than transportation, while the purposes of transportation construction could be social or military. Rather than necessary causes or sufficient causes, they are contributory causal interactions among many co-occurrent conditions. As the definition by Mackie (1998), "cause" refers to "insufficient but non-redundant parts of a condition which is itself unnecessary but sufficient for the occurrence of the effect(INUS conditions)." 
 
+How to distinguish cause and effect? One answer is that causality is an asymmetric relation between cause and effect. In process philosophy, it needs examine the process, event, becoming, or happening to recognize the cause and every effect.  causal processes, which is more important than causal relationships or causal interactions, can be identified by their ability to transmit an alteration over space and time (Salmon, 1984).  There are many theories such as probabilistic causation, causal calculus, structure learning, etc (Hernán MA, 2019). Here we use time series as a simple way to inference their realtion and process.
+
+As many natural processes, economic development exhibit a progression from small beginnings that accelerates and approaches a climax over time, whcih can be demonstrate by a logistic function or ![S-curve](https://upload.wikimedia.org/wikipedia/commons/8/88/Logistic-curve.svg). The x-axis is the time process and the y-axis reprecents the economic growth for a given background including socail, geograohic and technology conditions. If the transportation projects happent in the begining or the end of the curve, we can say supply led try to stimulate the economic development. If the projects happent during the mid segment of the curve, we would tend to use demand led to explain this event.
+
+
+ * Reference
+
+Gibbs, M.N. (Nov 2000). "Variational Gaussian process classifiers". IEEE Transactions on Neural Networks. 11 (6): 1458–1464.
+
+  _[1] Hernán MA, Robins JM (2019). Causal Inference. Boca Raton: Chapman & Hall/CRC, forthcoming._
+
+  _[2] Mackie, John L. The Cement of the Universe: A study in Causation. Clarendon Press, Oxford, England, 1988._
+  
+  _[3] Salmon, W. (1984) Scientific Explanation and the Causal Structure of the World. Princeton University Press._
