--- a/docs/usp537/hw_usp537.Rmd
+++ b/docs/usp537/hw_usp537.Rmd
@@ -446,6 +446,7 @@ How to distinguish cause and effect? One answer is that causality is an asymmetr
 
 As many natural processes, economic development exhibit a progression from small beginnings that accelerates and approaches a climax over time, whcih can be demonstrate by a logistic function or ![S-curve](https://upload.wikimedia.org/wikipedia/commons/8/88/Logistic-curve.svg =320x200). The x-axis is the time process and the y-axis reprecents the economic growth for a given background including socail, geograohic and technology conditions. If the transportation projects happent in the begining or the end of the curve, the project is a relatively strong factor to economy. We can say supply led transportation stimulates the economic development. If the projects happent during the mid segment of the curve, the project is relatively weak facotor and we would tend to use demand led to explain this event.
 
+<img src=https://upload.wikimedia.org/wikipedia/commons/8/88/Logistic-curve.svg width="320" height="200">
 
  * Reference
 
