--- a/static/usp537/hw_usp537.Rmd
+++ b/static/usp537/hw_usp537.Rmd
@@ -448,9 +448,13 @@ As many natural processes, economic development exhibit a progression from small
 
 <img src=https://upload.wikimedia.org/wikipedia/commons/8/88/Logistic-curve.svg width="320" height="200">
 
+<img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Logistic-curve.svg" width="320" height="200">
+
+![S-curve](https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Logistic-curve.svg/1280px-Logistic-curve.svg.png)
+
  * Reference
 
-Gibbs, M.N. (Nov 2000). "Variational Gaussian process classifiers". IEEE Transactions on Neural Networks. 11 (6): 1458–1464.
+  _[1] Gibbs, M.N. (2000). Variational Gaussian process classifiers. IEEE Transactions on Neural Networks. 11 (6): 1458–1464._
 
   _[1] Hernán MA, Robins JM (2019). Causal Inference. Boca Raton: Chapman & Hall/CRC, forthcoming._
 
