--- a/static/usp537/hw_usp537.Rmd
+++ b/static/usp537/hw_usp537.Rmd
@@ -434,9 +434,9 @@ In class, we discussed the supply led and demand led views of transportation and
    a. Categorize each of these projects into supply or demand led projects, and explain the reasons why you came to that particular view. Note that in many cases you do not need to know the specifics regarding the particular project to come to an educated guess, although some basic Googling of the locations that you are not familiar with might help with your guess.
 
 |         |
-| ---     |
-supply led|CrossRail|Channel Tunnel|M6 Toll motorway|Great Belt Link|Golden Gate Bridge|Skye Bridge|Mundra container terminal|Jubilee line extension|WES Commuter Rail
-demand led|
+| ---     | ---     | --- | --- | --- |---|---| ---|---|
+supply led|CrossRail||M6 Toll motorway|Great Belt Link||||Jubilee line extension|WES Commuter Rail
+demand led|         |Channel Tunnel|||Golden Gate Bridge|Skye Bridge|Mundra container terminal
 
    b. From the example projects listed, what overall conclusions can you draw regarding supply led and demand led transportation initiatives, particularly the balance between the two?
 
@@ -444,7 +444,12 @@ The opinion of supply led treates transportation projects as one cause of econom
 
 How to distinguish cause and effect? One answer is that causality is an asymmetric relation between cause and effect. In process philosophy, it needs examine the process, event, becoming, or happening to recognize the cause and every effect.  causal processes, which is more important than causal relationships or causal interactions, can be identified by their ability to transmit an alteration over space and time (Salmon, 1984).  There are many theories such as probabilistic causation, causal calculus, structure learning, etc (Hernán MA, 2019). Here we use time series as a simple way to inference their realtion and process.
 
-As many natural processes, economic development exhibit a progression from small beginnings that accelerates and approaches a climax over time, whcih can be demonstrate by a logistic function or ![S-curve]<img src=https://upload.wikimedia.org/wikipedia/commons/8/88/Logistic-curve.svg width="320" height="200">. The x-axis is the time process and the y-axis reprecents the economic growth for a given background including socail, geograohic and technology conditions. If the transportation projects happent in the begining or the end of the curve, the project is a relatively strong factor to economy. We can say supply led transportation stimulates the economic development. If the projects happent during the mid segment of the curve, the project is relatively weak facotor and we would tend to use demand led to explain this event.
+As many natural processes, economic development exhibit a progression from small beginnings that accelerates and approaches a climax over time, whcih can be demonstrate by a logistic function or S-curve. The x-axis is the time process and the y-axis reprecents the economic growth for a given background including socail, geograohic and technology conditions. If the transportation projects happent in the begining or the end of the curve, the project is a relatively strong factor to economy. We can say supply led transportation stimulates the economic development. If the projects happent during the mid segment of the curve, the project is relatively weak facotor and we would tend to use demand led to explain this event.
+
+<img src=https://upload.wikimedia.org/wikipedia/commons/8/88/Logistic-curve.svg width="320" height="200">
+
+My conclusion is that the value of slope $=1$ are two balance points which relate to some critical stages. when the slope is approaching to 1, which means the project may leverage the economy development; when the slope is away from 1 to the inflection point, the project may Lags behind economy and need ahead investment; After the inflection point, the project will have less and less stimukating effects; when the slope is away from 1 again and convergent to 0, the policy making about huge project should be more conservative.
+
 
  * Reference
 
