--- a/docs/usp537/hw_usp537.Rmd
+++ b/docs/usp537/hw_usp537.Rmd
@@ -395,9 +395,7 @@ The gasoline tax rise combined with the welfare-offsetting income tax rebate wil
 
   (iii) Given your analysis in parts (i) and (ii), is it possible to implement a policy that is consistent with the goals of environmentalists and yet not reduce the economic welfare of consumers?
 
-A possible policy is 
-
-Yes. It is possible to implement a policy that is consistent with the goals of environmentalists (gasoline tax decrease gasoline demand) and yet not reduce the economic welfare of consumers (tax rebate keeps the same consumer welfare). 
+A possible policy is a selective distribution of the welfare. Instead of inincome tax rebate, the subsidise on transit which is a substitution good for auto trips. Based on the question 1, we knew that the low income group will be more elastic with the change of price. In this way the policy is consistent with the goals of environmentalists and does not reduce the economic welfare of low-income riders.
 
  ---
  
@@ -405,7 +403,7 @@ Yes. It is possible to implement a policy that is consistent with the goals of e
 
 $$\eta_{}=\frac{\Delta Q_{}/Q_{}}{\Delta In_{}/In_{}}=\beta_2\frac{In_{}}{Q_{}}=277.3\frac{0.0011}{0.35}=0.8715143$$
 
-the absolute value of income elasticity of demand is 0.8715143 that is less than 1. Each 1 percent increase of income makes 0.8715143% increase of demand. The Gasolline consumption is inelastic for income.
+the absolute value of income elasticity of demand is 0.8715143 that is less than 1. Each 1 percent increase of income makes 0.8715143% increase of demand. The Gasoline consumption is inelastic for income.
 
  ---
 
@@ -434,13 +432,13 @@ In class, we discussed the supply led and demand led views of transportation and
    a. Categorize each of these projects into supply or demand led projects, and explain the reasons why you came to that particular view. Note that in many cases you do not need to know the specifics regarding the particular project to come to an educated guess, although some basic Googling of the locations that you are not familiar with might help with your guess.
 
 |         |
-| ---     |
-supply led|CrossRail|Channel Tunnel|M6 Toll motorway|Great Belt Link|Golden Gate Bridge|Skye Bridge|Mundra container terminal|Jubilee line extension|WES Commuter Rail
-demand led|
+| ---     | ---     | --- | --- | --- |---|---| ---|---|
+supply led|CrossRail||M6 Toll motorway|Great Belt Link||||Jubilee line extension|WES Commuter Rail
+demand led|         |Channel Tunnel|||Golden Gate Bridge|Skye Bridge|Mundra container terminal
 
    b. From the example projects listed, what overall conclusions can you draw regarding supply led and demand led transportation initiatives, particularly the balance between the two?
 
-The opinion of supply led treates transportation projects as one cause of economic development. Inversely, the opinion of demand led thinks that transportation projects is one effect of economic development. We know that economic development depend on many factors other than transportation, while the purposes of transportation construction could be social or military. Rather than necessary causes or sufficient causes, they are contributory causal interactions among many co-occurrent conditions. As the definition by Mackie (1998), "cause" refers to "insufficient but non-redundant parts of a condition which is itself unnecessary but sufficient for the occurrence of the effect(INUS conditions)." 
+The opinion of supply led treates transportation projects as one cause of economic development. Inversely, the opinion of demand led thinks that transportation projects is one effect of economic development. We know that economic development also depend on many factors other than transportation, while the purposes of transportation construction could be social or military. Rather than necessary causes or sufficient causes, they are contributory causal interactions among many co-occurrent conditions. As the definition by Mackie (1998), "cause" refers to "insufficient but non-redundant parts of a condition which is itself unnecessary but sufficient for the occurrence of the effect(INUS conditions)." 
 
 How to distinguish cause and effect? One answer is that causality is an asymmetric relation between cause and effect. In process philosophy, it needs examine the process, event, becoming, or happening to recognize the cause and every effect.  causal processes, which is more important than causal relationships or causal interactions, can be identified by their ability to transmit an alteration over space and time (Salmon, 1984).  There are many theories such as probabilistic causation, causal calculus, structure learning, etc (Hernán MA, 2019). Here we use time series as a simple way to inference their realtion and process.
 
@@ -448,7 +446,7 @@ As many natural processes, economic development exhibit a progression from small
 
 <img src=https://upload.wikimedia.org/wikipedia/commons/8/88/Logistic-curve.svg width="320" height="200">
 
-My conclusion is when the slope is close to 1, which means the project may leverage or Lags behind the economy development 
+My conclusion is that the value of slope $=1$ are two balance points which relate to some critical stages. when the slope is approaching to 1, which means the project may leverage the economy development; when the slope is away from 1 to the inflection point, the project may Lags behind economy and need ahead investment; After the inflection point, the project will have less and less stimukating effects; when the slope is away from 1 again and convergent to 0, the policy making about huge project should be more conservative.
 
 
  * Reference
