--- a/static/usp537/hw_usp537.Rmd
+++ b/static/usp537/hw_usp537.Rmd
@@ -401,7 +401,7 @@ A possible policy is a selective distribution of the welfare. Instead of inincom
  
   d. Calculate the income elasticity of demand, given that the sample mean for Income was $0.0011 billion dollars and gas demand was 0.35 thousand gallons.
 
-$$\eta_{}=\frac{\Delta Q_{}/Q_{}}{\Delta In_{}/In_{}}=\beta_2\frac{In_{}}{Q_{}}=277.3\frac{0.0011}{0.35}=0.8715143$$
+$$\eta=\frac{\Delta Q/Q}{\Delta In_{}/In_{}}=\beta_2\frac{In_{}}{Q_{}}=277.3\frac{0.0011}{0.35}=0.8715143$$
 
 the absolute value of income elasticity of demand is 0.8715143 that is less than 1. Each 1 percent increase of income makes 0.8715143% increase of demand. The Gasoline consumption is inelastic for income.
 
@@ -433,7 +433,7 @@ In class, we discussed the supply led and demand led views of transportation and
 
 |         |
 | ---     | ---     | --- | --- | --- |---|---| ---|---|
-supply led|CrossRail||M6 Toll motorway|Great Belt Link||||Jubilee line extension|WES Commuter Rail
+supply led|CrossRail||M6 Toll motorway|Great Belt Link||||Jubilee line extension|WES Commuter Rail\\hline
 demand led|         |Channel Tunnel|||Golden Gate Bridge|Skye Bridge|Mundra container terminal
 
    b. From the example projects listed, what overall conclusions can you draw regarding supply led and demand led transportation initiatives, particularly the balance between the two?
